# KIO-VTF-Thumb-Creator

./: CMakeLists.txt  README.md  VTFThumbCreator.cpp  VTFThumbCreator.h  vtfthumbcreator.desktop
